--- a/content-scripts/app/src/index.html
+++ b/content-scripts/app/src/index.html
@@ -8,6 +8,133 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-counter></app-counter>
+  <div id="left" style="display:none;">
+    <div class="title">
+      <div id="textbox">All Guns - Rocket Launchers - Hot Dogs Horseshoes and Hand Grenades Gameplay</div>
+    </div>
+    <div class="description">
+      <div id="textbox">
+        Today we check out all guns in Hot Dogs, Horseshoes & Hand Grenades! We will be checking out all the rocket launchers and explosives!
+
+        Hot Dogs Horseshoes & Hand Grenades (usually known as H3VR or H3) is a popular "shooting gallery" VR (virtual reality game) game for the HTC Vive and Oculus Rift, featuring realistic firearms; a responsive physics system; multiple firing ranges and gamemodes; lethal robots; horseshoes and goofy hot dogs. Game modes include: Grenade Skeeball, GUNasium, Meat Grinder, Wurst World, and the new Rise of the rotwieners.
+
+        Thanks for checking out my channel, I am Gone and I do let's plays, walkthroughs , playthroughs, and general gameplays of video games or whatever you want to call them in my spare time.  I think the best way to play a video is to play with others and luckily with the internet you can see my terrible gaming skills and commentary. Ultimately I hope you find it entertaining and hopefully made you smile or laugh at some point. Anyways, I am here to play video games and chew gum… and I am all out of gum so lets play some video games! Leave a comment and a like and I will catch you in the new episode!!
+
+        Subscribe to checkout more hotdogs horseshoes and handgrenades:
+        https://www.youtube.com/channel/UCl5y4wVSREP8nLLp-SDSVbg
+
+        Want to purchase Hotdogs Horseshoes and Hand grenade?
+        http://store.steampowered.com/app/450540/Hot_Dogs_Horseshoes__Hand_Grenades/
+
+        Have ideas?! Stop by the discord!
+        https://discord.gg/UnZPJ93
+      </div>
+    </div>
+    <div class="tags">
+      <div id="chip-bar">
+        <div class="chip-and-bar">
+          <div id="chip-text">
+            h3vr all guns
+          </div>
+          <div id="chip-text">
+            hot dogs horseshoes and hand grenades all guns
+          </div>
+          <div id="chip-text">
+            hot dogs horseshoes hand grenades
+          </div>
+          <div id="chip-text">
+            hotdogs horseshoes and hand grenade
+          </div>
+          <div id="chip-text">
+            hotdogs horseshoes and handgrenades
+          </div>
+          <div id="chip-text">
+            Hot Dogs Horseshoes Hand grenades
+          </div>
+          <div id="chip-text">
+            hot dogs horseshoes and hand grenades gameplay
+          </div>
+          <div id="chip-text">
+            hot dogs
+          </div>
+          <div id="chip-text">
+            horseshoes
+          </div>
+          <div id="chip-text">
+            hand grenades
+          </div>
+          <div id="chip-text">
+            horseshoes hand grenade
+          </div>
+          <div id="chip-text">
+            h3VR
+          </div>
+          <div id="chip-text">
+            all guns
+          </div>
+          <div id="chip-text">
+            let's play
+          </div>
+          <div id="chip-text">
+            lets play
+          </div>
+          <div id="chip-text">
+            gameplay
+          </div>
+          <div id="chip-text">
+            walkthrough
+          </div>
+          <div id="chip-text">
+            playthrough
+          </div>
+          <div id="chip-text">
+            commentary
+          </div>
+          <div id="chip-text">
+            vr
+          </div>
+          <div id="chip-text">
+            virtual
+          </div>
+          <div id="chip-text">
+            reality
+          </div>
+          <div id="chip-text">
+            htc
+          </div>
+          <div id="chip-text">
+            htc
+          </div>
+          <div id="chip-text">
+            vive
+          </div>
+          <div id="chip-text">
+            vive
+          </div>
+          <div id="chip-text">
+            oculus
+          </div>
+          <div id="chip-text">
+            oculus
+          </div>
+          <div id="chip-text">
+            rift
+          </div>
+          <div id="chip-text">
+            gone
+          </div>
+          <div id="chip-text">
+            gone_
+          </div>
+          <div id="chip-text">
+            goneunderscore
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div style="width: 640px;">
+    <app-tag-counter></app-tag-counter>
+  </div>
 </body>
 </html>
