TC-44 - Create simple basic search keyword widget component

--- a/content-scripts/app/src/index.html
+++ b/content-scripts/app/src/index.html
@@ -134,6 +134,7 @@
     </div>
   </div>
   <div style="width: 640px;">
+    <app-tag-search></app-tag-search>
     <app-tag-counter></app-tag-counter>
   </div>
 </body>
